--- a/frontend/src/App/App.scss
+++ b/frontend/src/App/App.scss
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  background-color: rgb(212, 212, 212);
+  height: auto;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -14,14 +17,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #828282;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+
 }
 
 .App-link {
@@ -35,4 +38,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+.active {
+  background-color: #fff;
+  border: 2px solid greenyellow;
+}
+
+.film__item {
+  background-color: tomato;
 }
